Change default name

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,8 +16,8 @@ mapping_version=1.20.1
 
 # Mod Properties
 
-mod_id=forge_1_20_1_template
-mod_name=Forge-1.20.1-Template
+mod_id=forge_1_20_1
+mod_name=Forge-1.20.1
 mod_license=GPL-3.0
 mod_version=1.0.0
 mod_publisher=kimchiloof
