--- a/gradle.properties
+++ b/gradle.properties
@@ -6,20 +6,32 @@ org.gradle.daemon=false
 minecraft_version=1.20.1
 minecraft_version_range=[1.20.1,1.21)
 
-forge_version=47.2.0
-forge_version_range=[47,)
+forge_version=47.2.20
+forge_version_range=[47,48)
 
-mapping_channel=official
-mapping_version=1.20.1
+mapping_channel=parchment
+mapping_version=2023.09.03-1.20.1
 
 # Dependency Properties
 
+jei_version=15.2.0.27
+
+patchouli_version=84-FORGE
+
+flywheel_version=0.6.10-7
+registrate_version=MC1.20-1.3.3
+create_version=0.5.1.e-22
+create_version_range=[0.5.1.c,0.5.2)
+
+tfc_version=5044308
+tfc_version_range=[3.0.0,4.0.0)
+
 # Mod Properties
 
-mod_id=forge_1_20_1
-mod_name=Forge-1.20.1
+mod_id=tfc_tweaks_create
+mod_name=TerraFirmaTweaks: Create
 mod_license=GPL-3.0
-mod_version=1.0.0
+mod_version=0.1.0
 mod_publisher=kimchiloof
 mod_authors=Kimchiloof
-mod_description=
+mod_description=Adds some minor compatibility and balance tweaks between Create and TerraFirmaCraft.
