--- a/gradle.properties
+++ b/gradle.properties
@@ -14,12 +14,16 @@ mapping_version=2023.09.03-1.20.1
 
 # Dependency Properties
 
+cloth_version=11.1.118
+
 jei_version=15.2.0.27
 
 patchouli_version=84-FORGE
 
 flywheel_version=0.6.10-7
+
 registrate_version=MC1.20-1.3.3
+
 create_version=0.5.1.e-22
 create_version_range=[0.5.1.c,0.5.2)
 
@@ -28,10 +32,10 @@ tfc_version_range=[3.0.0,4.0.0)
 
 # Mod Properties
 
-mod_id=tfc_tweaks_create
-mod_name=TerraFirmaTweaks: Create
+mod_id=terrafirmatweaks
+mod_name=TerraFirmaTweaks
 mod_license=GPL-3.0
 mod_version=0.1.0
 mod_publisher=kimchiloof
 mod_authors=Kimchiloof
-mod_description=Adds some minor compatibility and balance tweaks between Create and TerraFirmaCraft.
+mod_description=Adds some minor compatibility and balance tweaks between TerraFirmaCraft and other mods.
