--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -51,3 +51,10 @@ license="${mod_license}"
    versionRange="${create_version_range}"
    ordering="AFTER"
    side="BOTH"
+
+[[dependencies.${mod_id}]]
+    modId="cloth_config"
+    mandatory=false
+    versionRange="${cloth_version_range}"
+    ordering="AFTER"
+    side="CLIENT"
