--- a/gradle.properties
+++ b/gradle.properties
@@ -15,6 +15,7 @@ mapping_version=2023.09.03-1.20.1
 # Dependency Properties
 
 cloth_version=11.1.118
+cloth_version_range=[11,12)
 
 jei_version=15.2.0.27
 
