--- a/gradle.properties
+++ b/gradle.properties
@@ -31,6 +31,10 @@ create_version_range=[0.5.1.c,0.5.2)
 tfc_version=5044308
 tfc_version_range=[3.0.0,4.0.0)
 
+# Non-Minecraft Dependency Properties
+
+toml4j_version=0.7.2
+
 # Mod Properties
 
 mod_id=terrafirmatweaks
