--- a/build.gradle
+++ b/build.gradle
@@ -110,6 +110,13 @@ dependencies {
 
     // Dependencies
 
+    // Patchouli - REQUIRED
+    compileOnly fg.deobf("vazkii.patchouli:Patchouli:${minecraft_version}-${patchouli_version}:api")
+    runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:${minecraft_version}-${patchouli_version}")
+
+    // TerraFirmaCraft - REQUIRED
+    implementation fg.deobf("curse.maven:terrafirmacraft-302973:${tfc_version}")
+
     // Cloth Config
     compileOnly fg.deobf("me.shedaniel.cloth:cloth-config-forge:${cloth_version}")
     runtimeOnly fg.deobf("me.shedaniel.cloth:cloth-config-forge:${cloth_version}")
@@ -119,10 +126,6 @@ dependencies {
     compileOnly fg.deobf("mezz.jei:jei-${minecraft_version}-forge-api:${jei_version}")
     runtimeOnly fg.deobf("mezz.jei:jei-${minecraft_version}-forge:${jei_version}")
 
-    // Patchouli
-    compileOnly fg.deobf("vazkii.patchouli:Patchouli:${minecraft_version}-${patchouli_version}:api")
-    runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:${minecraft_version}-${patchouli_version}")
-
     // Create, Flywheel, Registrate
     compileOnly fg.deobf("com.simibubi.create:create-${minecraft_version}:${create_version}:slim") { transitive = false }
     compileOnly fg.deobf("com.jozufozu.flywheel:flywheel-forge-${minecraft_version}:${flywheel_version}")
@@ -130,9 +133,6 @@ dependencies {
     runtimeOnly fg.deobf("com.simibubi.create:create-${minecraft_version}:${create_version}:slim") { transitive = false }
     runtimeOnly fg.deobf("com.jozufozu.flywheel:flywheel-forge-${minecraft_version}:${flywheel_version}")
     runtimeOnly fg.deobf("com.tterrag.registrate:Registrate:${registrate_version}")
-
-    // TerraFirmaCraft - REQUIRED
-    implementation fg.deobf("curse.maven:terrafirmacraft-302973:${tfc_version}")
 }
 
 processResources {
