--- a/gradle.properties
+++ b/gradle.properties
@@ -26,9 +26,9 @@ flywheel_version=0.6.10-7
 registrate_version=MC1.20-1.3.3
 
 create_version=0.5.1.e-22
-create_version_range=[0.5.1.c,0.5.2)
+create_version_range=[0.5.1.e,0.5.2)
 
-tfc_version=5044308
+tfc_version=5065718
 tfc_version_range=[3.0.0,4.0.0)
 
 # Mod Properties
