Add mod credits

--- a/gradle.properties
+++ b/gradle.properties
@@ -38,5 +38,6 @@ mod_name=TerraFirmaTweaks
 mod_license=GPL-3.0
 mod_version=0.1.0
 mod_publisher=kimchiloof
+mod_credits=Thanks Serious Creeper for the original TFC Tweaks and TFC Create, and Chauve Dev for Wooden Cog!
 mod_authors=Kimchiloof
-mod_description=Adds some minor compatibility and balance tweaks between TerraFirmaCraft and other mods.
+mod_description=Adds some compatibility and balance tweaks between TerraFirmaCraft and other mods.
