--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -12,7 +12,7 @@ license="${mod_license}"
    #updateJSONURL=""  # See the JSON update specification https://docs.minecraftforge.net/en/latest/misc/updatechecker/
    #displayURL=""
    #logoFile=""
-   #credits=""
+   credits="${mod_credits}"
    authors="${mod_authors}"
    # Display Test controls the display for your mod in the server connection screen
    # MATCH_VERSION means that your mod will cause a red X if the versions on client and server differ. This is the default behaviour and should be what you choose if you have server and client elements to your mod.
