--- a/build.gradle
+++ b/build.gradle
@@ -147,6 +147,7 @@ processResources {
             mod_name: mod_name,
             mod_license: mod_license,
             mod_version: version,
+            mod_credits: mod_credits,
             mod_authors: mod_authors,
             mod_description: mod_description,
     ]
