Update license to match

--- a/gradle.properties
+++ b/gradle.properties
@@ -35,7 +35,7 @@ tfc_version_range=[3.0.0,4.0.0)
 
 mod_id=terrafirmatweaks
 mod_name=TerraFirmaTweaks
-mod_license=GPL-3.0
+mod_license=LGPL-3.0
 mod_version=0.1.0
 mod_publisher=kimchiloof
 mod_credits=Thanks Serious Creeper for the original TFC Tweaks and TFC Create, and Chauve Dev for Wooden Cog!
