--- a/gradle.properties
+++ b/gradle.properties
@@ -28,8 +28,11 @@ registrate_version=MC1.20-1.3.3
 create_version=0.5.1.e-22
 create_version_range=[0.5.1.e,0.5.2)
 
+firmalife_version=5051374
+firmalife_version_range=[2.0.0,)
+
 tfc_version=5065718
-tfc_version_range=[3.0.0,4.0.0)
+tfc_version_range=[3.0.0,)
 
 # Mod Properties
 
