--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -53,6 +53,13 @@ license="${mod_license}"
     side="CLIENT"
 
 [[dependencies.${mod_id}]]
+    modId="firmalife"
+    mandatory=false
+    versionRange="${firmalife_version_range}"
+    ordering="AFTER"
+    side="BOTH"
+
+[[dependencies.${mod_id}]]
    modId="create"
    mandatory=false
    versionRange="${create_version_range}"
