--- a/build.gradle
+++ b/build.gradle
@@ -180,7 +180,7 @@ processResources {
             mod_id: mod_id,
             mod_name: mod_name,
             mod_license: mod_license,
-            mod_version: version,
+            mod_version: mod_version,
             mod_credits: mod_credits,
             mod_authors: mod_authors,
             mod_description: mod_description,
