--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,9 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
+# ======================
 # Environment Properties
+# ======================
 
 minecraft_version=1.20.1
 minecraft_version_range=[1.20.1,1.21)
@@ -12,12 +14,14 @@ forge_version_range=[47,48)
 mapping_channel=parchment
 mapping_version=2023.09.03-1.20.1
 
+# =====================
 # Dependency Properties
+# =====================
 
 cloth_version=11.1.118
 cloth_version_range=[11,12)
 
-jei_version=15.2.0.27
+jei_version=15.3.0.4
 
 patchouli_version=84-FORGE
 
@@ -28,13 +32,17 @@ registrate_version=MC1.20-1.3.3
 create_version=0.5.1.e-22
 create_version_range=[0.5.1.e,0.5.2)
 
-firmalife_version=5051374
+# Firmalife version: 2.0.9-beta
+firmalife_version=5136165
 firmalife_version_range=[2.0.0,)
 
-tfc_version=5065718
+# TFC version: 3.1.9
+tfc_version=5133509
 tfc_version_range=[3.0.0,)
 
+# ==============
 # Mod Properties
+# ==============
 
 mod_id=terrafirmatweaks
 mod_name=TerraFirmaTweaks
